--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'public' as *;
+
+* {
+  margin        : 0;
+  padding       : 0;
+  box-sizing    : border-box;
+}
+
+body {
+  @include rec(100vw, 100vh);
+  display       : flex;
+  background    : #248;
+}
