--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,11 +3,13 @@
 * {
   margin        : 0;
   padding       : 0;
+  line-height   : 1;
   box-sizing    : border-box;
+  font-family   : 'Barlow Semi Condensed'
 }
 
 body {
   @include rec(100vw, 100vh);
   display       : flex;
-  background    : #248;
+  background    : radial-gradient(var(--radial-gradient));
 }
