--- a/src/app/board-button/board-button.component.html
+++ b/src/app/board-button/board-button.component.html
@@ -1,3 +1,6 @@
 <div class="inner-circle">
-  <img *ngIf="imgSrc as src" [src]="src"/>
+  <img
+    *ngIf="imgSrc as src"
+    [src]="src"
+  />
 </div>
