--- a/src/shared/styles/_global-vars.scss
+++ b/src/shared/styles/_global-vars.scss
@@ -12,7 +12,7 @@
   --header-outline      : hsl(217, 16%, 45%);
 
   // Background
-  --radial-gradient     : hsl(214, 47%, 23%), hsl(237, 49%, 15%);
+  --radial-gradient     : circle at top, hsl(214, 47%, 23%), hsl(237, 49%, 15%);
 
   // Buttons
   --btn-size            : 140px;
