--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,8 @@
   padding       : 0;
   line-height   : 1;
   box-sizing    : border-box;
-  font-family   : 'Barlow Semi Condensed'
+  font-family   : 'Barlow Semi Condensed';
+  color         : white;
 }
 
 body {
