--- a/src/app/board-button/board-button.component.scss
+++ b/src/app/board-button/board-button.component.scss
@@ -12,7 +12,7 @@ $insetShadowParams    : 0px inset #0003;
   cursor              : pointer;
 
   &:hover {
-    padding           : 30px;
+    padding           : 16px;
   }
 
   &.rock {
@@ -49,6 +49,18 @@ $insetShadowParams    : 0px inset #0003;
   background          : #eee;
   border-radius       : var(--btn-size);
   box-shadow          : 0 6px $insetShadowParams;
+
+  &.player-1 {
+    background        : #b8beff;
+  }
+
+  &.player-2 {
+    background        : #ffb8b8;
+  }
+
+  &.draw {
+    background        : #f5b8ff;
+  }
 }
 
 img {
