--- a/src/app/game-status/game-status.component.scss
+++ b/src/app/game-status/game-status.component.scss
@@ -1,7 +1,8 @@
 @use 'public' as *;
 
 :host {
-  @include flex(center, center, true, 8px);
+  @include flex(space-between, center, true, 8px);
+  height: 80px;
 }
 
 section {
