--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -10,6 +10,7 @@
 <main>
   <h6> SCORE </h6>
   <h1 *ngIf="(game.score$ | async) as score">
-    {{ score[0] }} - {{ score[1] }}
+    <span class="player-1">{{ score[0] }}</span> -
+    <span class="player-2">{{ score[1] }}</span>
   </h1>
 </main>
